--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -8,54 +8,66 @@
     android:layout_marginRight="16dp">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/titleEvent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/colorBlack"
+                android:textSize="16sp" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/titleEvent"
-                    android:textSize="16sp"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@color/colorBlack"/>
+            <TextView
+                android:id="@+id/whenEvent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/colorGrey"
+                android:textSize="12sp" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/whenEvent"
-                    android:textSize="12sp"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@color/colorGrey"/>
+        </LinearLayout>
 
-            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="38dp"
+            android:layout_weight="9"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="64dp"
-                android:layout_weight="9"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/popupmenu_event_icon"
-                    android:src="@mipmap/ic_dots_vertical_grey600_24dp"
-                    android:layout_gravity="center_vertical|right"/>
+                android:layout_height="8dp"
+                android:orientation="horizontal">
 
             </LinearLayout>
 
+            <ImageView
+                android:id="@+id/popupmenu_event_icon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_horizontal|center"
+                android:src="@mipmap/ic_dots_vertical_grey600_24dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="8dp"
+                android:orientation="horizontal">
+
+            </LinearLayout>
+
+        </LinearLayout>
 
 
-        </LinearLayout>>
+    </LinearLayout>>
 
 
 
