--- a/app/src/main/res/layout/object_item.xml
+++ b/app/src/main/res/layout/object_item.xml
@@ -11,7 +11,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="64dp"
+            android:layout_height="48dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -44,12 +44,26 @@
                 android:layout_weight="9"
                 android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:id="@+id/popupmenu_object_icon"
-                    android:src="@mipmap/ic_dots_vertical_grey600_24dp"
-                    android:layout_gravity="center_vertical|right"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right|center_horizontal|center"
+                    android:src="@mipmap/ic_dots_vertical_grey600_24dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
 
             </LinearLayout>
 
